WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195425
[ iOS Sim ] REGRESSION (
r242277
) Layout Test http/tests/cookies/same-site/lax-samesite-cookie-after-cross-site-history-load.php is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=195425
Summary
[ iOS Sim ] REGRESSION (r242277) Layout Test http/tests/cookies/same-site/lax...
Shawn Roberts
Reported
2019-03-07 11:09:55 PST
The following layout test a timeout on iOS Simulator http/tests/cookies/same-site/lax-samesite-cookie-after-cross-site-history-load.php Probable cause: Test will timeout when it runs after any layout test in the http/tests/cookies/same-site/* directory Then pass on the re-try Prior to
r242277
this test case is passing Reproduced with: run-webkit-tests http/tests/cookies/same-site/ --child-processes 1 --ios-simulator Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fcookies%2Fsame-site%2Flax-samesite-cookie-after-cross-site-history-load.php
Attachments
Patch
(3.47 KB, patch)
2019-03-27 13:10 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-07 11:10:33 PST
<
rdar://problem/48682403
>
Shawn Roberts
Comment 2
2019-03-08 09:58:07 PST
Additional repro steps: Test first showed on the dashboard for iOS Sim / iOS Debug around
r242280
Was unable to reproduce locally running just the test by itself using: run-webkit-tests http/tests/cookies/same-site/lax-samesite-cookie-after-cross-site-history-load.php --iterations 500 - f --ios-simulator Looked at build log for Apple iOS 12 Simulator Release WK2 (Tests) Build #3027 and pulled the worker test list that included this test using Layout test failure analysis website. Created a test list file from this worker list, and found test failed when running with this test list, then through bisection removed tests preceding this test until I found when running any test in the "http/tests/cookies/same-site/" caused this test to fail. Searched on trac and found the test change to this test was
r241070
and used this as a bisecting point. Tested with the following revisions using this command "run-webkit-tests http/tests/cookies/same-site/ --child-processes 1 --ios-simulator" 242623 Timeout 242435 Timeout 242336 Timeout 242285 Timeout 242280 Timeout 242277 Timeout 242276 Passed 242275 Passed 242260 Passed 242234 Passed 241847 Passed 241070 Passed
Chris Dumez
Comment 3
2019-03-21 15:28:52 PDT
Seems very unlikely
http://trac.webkit.org/changeset/242277/webkit
is the cause but ok.
Chris Dumez
Comment 4
2019-03-21 15:44:28 PDT
Seems to reproduce like so: run-webkit-tests LayoutTests/http/tests/cookies/same-site/fetch-in-same-origin-worker.html LayoutTests/http/tests/cookies/same-site/lax-samesite-cookie-after-cross-site-history-load.php --child-processes 1 --ios-simulator --no-build
Chris Dumez
Comment 5
2019-03-27 13:10:14 PDT
Created
attachment 366097
[details]
Patch
WebKit Commit Bot
Comment 6
2019-03-27 13:47:58 PDT
Comment on
attachment 366097
[details]
Patch Clearing flags on attachment: 366097 Committed
r243562
: <
https://trac.webkit.org/changeset/243562
>
WebKit Commit Bot
Comment 7
2019-03-27 13:47:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug